# cookiecutter-arduino

./: CMakeLists.txt
cmake/: arduino_toolchain.txt
cmake/Modules/: avrdude.cmake
cmake/Platform/: arduino_toolchain.txt
src/: main.cpp
{{cookiecutter.directory_name}}/: CMakeLists.txt
{{cookiecutter.directory_name}}/cmake/Modules/: avrdude.cmake
{{cookiecutter.directory_name}}/src/: CMakeLists.txt
